fix errors